Further javadoc template removal